req from VTT: search streams by metadata constraints, new endpoint
