# streams/api/http/requests.go
@@ -53,14 +53,17 @@ type searchStreamsReq struct {
 	// Fields `Owner` and `user` represent owner of the Stream and
 	// the user who sent request respectively.
 	user       string
-	Name       string      `alias:"name"`
-	Owner      string      `alias:"owner"`
-	StreamType string      `alias:"type"`
-	Coords     [][]float64 `alias:"coords"`
-	Page       uint64      `alias:"page"`
-	Limit      uint64      `alias:"limit"`
-	MinPrice   *uint64     `alias:"minPrice"`
-	MaxPrice   *uint64     `alias:"maxPrice"`
+	Name       string      `alias:"name" json:"name"`
+	Owner      string      `alias:"owner" json:"owner"`
+	StreamType string      `alias:"type" json:"type"`
+	Coords     [][]float64 `alias:"coords" json:"coords"`
+	Page       uint64      `alias:"page" json:"page"`
+	Limit      uint64      `alias:"limit" json:"limit"`
+	MinPrice   *uint64     `alias:"minPrice" json:"minPrice"`
+	MaxPrice   *uint64     `alias:"maxPrice" json:"maxPrice"`
+
+	// Metadata is the stream metadata constraint
+	Metadata map[string]interface{} `json:"metadata"`
 }
 
 func newSearchStreamReq() searchStreamsReq {
